# uv-bump

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/uv_bump/: cli.py  main.py
tests/: test_cli.py  test_main.py
